--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,17 @@
     "keywords": [
         "php",
         "laravel",
-        "template"
+        "tenancy",
+        "multi-database",
+        "multi-tenancy",
+        "filamentphp",
+        "filament-plugins",
+        "tomatophp"
     ],
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Tomatophp\\FilamentTenancy\\": "src/"
+            "TomatoPHP\\FilamentTenancy\\": "src/"
         }
     },
     "autoload-dev": {
@@ -21,7 +26,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Tomatophp\\FilamentTenancy\\FilamentTenancyServiceProvider"
+                "TomatoPHP\\FilamentTenancy\\FilamentTenancyServiceProvider"
             ]
         }
     },
@@ -32,7 +37,9 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "tomatophp/console-helpers": "^1.0"
+        "php": "^8.1|^8.2",
+        "stancl/tenancy": "^3.8",
+        "tomatophp/console-helpers": "^1.1",
+        "filament/filament": "^3.0"
     }
 }
